--- a/src/main/webapp/Styling/home_style.css
+++ b/src/main/webapp/Styling/home_style.css
@@ -1,13 +1,86 @@
 #href{
-    background-color: #4169E1;
+    background-color: #86af49;
     color: white;
     padding: 14px 25px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    margin-left:1%;
+
+
 }
 #homepagina{
-	padding: 70px;
-    border: 5px solid 	#228B22;
+	padding: 40px;
+}
+#img1{
+	border-radius: 10px;
+	margin-left:30%;
+
+}
+#uitloggen{
+	background-color: #86af49;
+    color: white;
+    padding: 14px 25px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+}
+#table, #table1{
+    font-family: arial;
+    width: 100%;
+    border: 1px solid;
+    text-align: left;
+
+}
+#toevoegen1, #bestellen1, #toevoegen2{
+	background-color: #4169E1;
+    color: white;
+    padding: 14px 25px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+}
+#totale_prijs{
+	margin-left: 27%;
+}
+#input{
+	margin-left: 11%;
+}
+#input2{
+	margin-left: 172px;
+}
+#input3{
+	margin-left: 154px;
+}
+#input4{
+	margin-left: 76px;
+}
+th{
+	width:10%;
+}
+.btn, .btn3{
+	background-color: #4169E1;
+    color: white;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+	
+}
+#opmerking_plaatsen{
+	background-color: #4CAF50;
+    color: white;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+}
+#productinformatie{
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 18px;
+}
+tr{
+	cursor: pointer;
+}
+#opmerking_plaatsen2{
+	display:none;
 }
